# artifact

./: .gitignore  CMakeLists.txt  README.md  build.sh  env.sh
correctness_test/: CMakeLists.txt  runGLIBC.sh  runPRLIBMTest.sh
correctness_test/glibc/: CMakeLists.txt
correctness_test/glibc/double/: CMakeLists.txt
correctness_test/glibc/double/src/: Exp.c  Exp10.c  Exp2.c  LibTestHelper.h  Log.c  Log10.c  Log2.c
correctness_test/glibc/float/: CMakeLists.txt
correctness_test/glibc/float/src/: Exp.c  Exp10.c  Exp2.c  LibTestHelper.h  Log.c  Log10.c  Log2.c
correctness_test/prlibm/: CMakeLists.txt
correctness_test/prlibm/src/: Exp.c  Exp10.c  Exp2.c  LibTestHelper.h  Log.c  Log10.c  Log2.c  debug.c
libm/: CMakeLists.txt
libm/include/libm/: prlibm.h
libm/src/: exp.c  exp10.c  exp2.c  log.c  log10.c  log2.c
performance_test/: CMakeLists.txt  runGLIBC.sh  runPRLIBM.sh  runRLIBM.sh
performance_test/glibc/double/: CMakeLists.txt  log.i
performance_test/glibc/double/src/: exp.c  exp10.c  exp2.c  log.c  log10.c  log2.c
performance_test/glibc/float/: CMakeLists.txt  log.i
performance_test/glibc/float/src/: exp.c  exp10.c  exp2.c  log.c  log10.c  log2.c
performance_test/include/performance_test/: LibTestHelper.h
performance_test/prlibm/: CMakeLists.txt
performance_test/prlibm/src/: exp.c  exp10.c  exp2.c  log.c  log10.c  log2.c
performance_test/rlibm/: CMakeLists.txt
performance_test/rlibm/src/: exp10_estrin_fma.c  exp2_estrin_fma.c  exp_estrin_fma.c  log10_estrin_fma.c  log2_estrin_fma.c  log_estrin_fma.c  rlibm.h
polynomial_generator/: CMakeLists.txt  exp-estrin-fma.txt  exp10run.sh  exp2run.sh  log10-estrin-fma.txt  log10run.sh  log2run.sh  logrun.sh  piecewise-small-estrin-fma.cpp  rlibm-fast.h
polynomial_generator/runs/: exp10run.sh  exp2run.sh  exprun.sh  log10run.sh  run.sh
prlibm-naive/polynomial_generator/: CMakeLists.txt  piecewise-small-estrin-fma.cpp  rlibm-fast.h
prlibm-naive/polynomial_generator/cfg_files/: exp10-estrin-fma.txt  exp2-estrin-fma.txt  log-estrin-fma.txt  log2-estrin-fma.txt
