find_package(OpenMP)
set(MPI_EXECUTABLE_SUFFIX ".mpich")
find_package(MPI)
find_package(TBB)
set(CMAKE_CXX_STANDARD 17)
#set(TBB_LIBRARIES "/opt/intel/oneapi/tbb/2021.9.0/lib/intel64/gcc4.8/libtbb.so")
#include_directories(/opt/intel/oneapi/tbb/2021.9.0/include/tbb/)
add_executable(polygen-estrin-fma piecewise-small-estrin-fma.cpp rlibm-fast.h)
target_link_libraries(polygen-estrin-fma $ENV{SOPLEX_LIB} gmp z m OpenMP::OpenMP_CXX MPI::MPI_CXX)
#target_link_libraries(polygen-estrin-fma PRIVATE ${TBB_LIBRARIES})
target_include_directories(polygen-estrin-fma PRIVATE $ENV{SOPLEX_INCLUDE})
#target_include_directories(polygen-estrin-fma PRIVATE $ENV{TBB_INCLUDE})
target_compile_options(polygen-estrin-fma PRIVATE -O2 -g -DTBB_USE_DEBUG=ON)
set_target_properties(polygen-estrin-fma PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/obj)

#if (NOT EXIT_ON_THRESHOLD)
#    target_compile_definitions(polygen-estrin-fma PRIVATE EXIT_ON_THRESHOLD)
#endif ()
