#find_package(OpenMP)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.c")
foreach(SOURCE ${SOURCES})
    get_filename_component(EXECUTABLE_NAME ${SOURCE} NAME_WE)
    set(EXECUTABLE_NAME "perf_test_${EXECUTABLE_NAME}")
    add_executable(${EXECUTABLE_NAME} ${SOURCE})
    target_compile_options(${EXECUTABLE_NAME} PRIVATE -std=c11 -O0 -DIGNORE_SPECIAL_INPUT -frounding-math -fsignaling-nans)
    target_include_directories(${EXECUTABLE_NAME} PRIVATE ../include)
    target_link_libraries(${EXECUTABLE_NAME} PRIVATE prlibm gmp m)

    get_filename_component(FILE_NAME ${SOURCE} NAME_WE)
    set(EXECUTABLE_NAME2 "perf_test_no_ig_${FILE_NAME}")
    add_executable(${EXECUTABLE_NAME2} ${SOURCE})
    target_compile_options(${EXECUTABLE_NAME2} PRIVATE -std=c11 -O0 -frounding-math -fsignaling-nans)
    target_include_directories(${EXECUTABLE_NAME2} PRIVATE ../include)
    target_link_libraries(${EXECUTABLE_NAME2} PRIVATE prlibm gmp m)
endforeach()
