#set(CMAKE_C_STANDARD 11)
find_package(OpenMP)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.c")
foreach(SOURCE ${SOURCES})
    get_filename_component(EXECUTABLE_NAME ${SOURCE} NAME_WE)
    set(EXECUTABLE_NAME "correct_test_glibc_flt_${EXECUTABLE_NAME}")
    add_executable(${EXECUTABLE_NAME} ${SOURCE})
    target_compile_options(${EXECUTABLE_NAME} PRIVATE -std=c11 -O3)
    #    target_link_libraries(${EXECUTABLE_NAME} PRIVATE OpenMP::OpenMP_C ${CMAKE_CURRENT_SOURCE_DIR}/../libm/prlibm.a gmp m)
    target_link_libraries(${EXECUTABLE_NAME} PRIVATE OpenMP::OpenMP_C prlibm m)
    #    set_target_properties(${EXECUTABLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/obj)
endforeach()
