file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.c")
foreach(SOURCE ${SOURCES})
    get_filename_component(FILE_NAME ${SOURCE} NAME_WE)
    set(EXECUTABLE_NAME2 "perf_test_no_ig_dle_glibc_${FILE_NAME}")
    add_executable(${EXECUTABLE_NAME2} ${SOURCE})
    target_compile_options(${EXECUTABLE_NAME2} PRIVATE -std=c11 -O0 -frounding-math -fsignaling-nans)
    target_include_directories(${EXECUTABLE_NAME2} PRIVATE ../../include ../../../libm/include/libm)
    target_link_libraries(${EXECUTABLE_NAME2} PRIVATE gmp m)
endforeach()
